fixed zindex of footer and added spacing on sidebar

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -19,6 +19,7 @@ footer {
   color: $white;
   font-size: 12px;
   border-top: 1px solid $light-grey;
+  z-index: 1;
 }
 .footer-links {
   display: flex;
